# cifar10-pow-strategy

./: output_powd.txt  output_rand.txt  output_rpowd.txt  pyproject.toml
app/: client_app.py  fed_avg.py  fed_avg_custom.py  server_app.py  task.py
